add DB/puzzle fields to support equivalent puzzles